--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
         });
         
         // $('#selectcontrolm').MultiColumnSelectDestroy();
+        $('#selectcontrolm').MultiColumnSelectAddItem('New','New Item');
        
      });  
     </script>
