Added 'Selected' support on options

--- a/demo.html
+++ b/demo.html
@@ -31,7 +31,7 @@
         <div id="selectcontrol">
           <select name="car">
                 <option value="Audi">Audi</option>
-                <option value="Bugatti">Bugatti</option>
+                <option value="Bugatti" selected>Bugatti</option>
                 <option value="Chrysler">Chrysler</option>
                 <option value="Daihatsu">Daihatsu</option>
                 <option value="Ford">Ford</option>
@@ -50,10 +50,10 @@
 
             <div id="selectcontrolm">
           <select name="cassr" multiple>
-                <option value="Audi">Audi22</option>
+                <option value="Audi" selected>Audi22</option>
                 <option value="Bugatti">Bugatti</option>
                 <option value="Chrysler">Chrysler</option>
-                <option value="Daihatsu">Daihatsu</option>
+                <option value="Daihatsu" selected>Daihatsu</option>
                 <option value="Ford">Ford</option>
                 <option value="GM">General Motors</option>
                 <option value="Honda">Honda</option>
@@ -73,7 +73,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.1/jquery.min.js"></script> 
     <!--<![endif]-->  
     
-    <script src="Multi-Column-Select/Multi-Column-Select.js"></script>
+    <script src="Multi-Column-Select/Multi-Column-Select.min.js"></script>
     
     <script>
      $(document).ready(function(){
